@@ -26,7 +26,7 @@
 			<key>caret</key>
 			<dict>
 				<key>column</key>
-				<integer>42</integer>
+				<integer>26</integer>
 				<key>line</key>
 				<integer>2</integer>
 			</dict>
@@ -46,7 +46,7 @@
 			<key>selectTo</key>
 			<dict>
 				<key>column</key>
-				<integer>42</integer>
+				<integer>26</integer>
 				<key>line</key>
 				<integer>2</integer>
 			</dict>
@@ -59,6 +59,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{626, 118}, {859, 1032}}</string>
+	<string>{{664, 90}, {970, 1070}}</string>
 </dict>
 </plist>
